# pea-genetic

./: Cargo.toml
src/: genetic.rs  graph.rs  graph_parser.rs  main.rs
