[package]
name = "pea-genetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3


[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
rand = { version = "0.8.5", features = [] }
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
serde_json = "1.0.111"
